--- a/language/en.json
+++ b/language/en.json
@@ -1,17 +1,19 @@
 {
+    "language_name":"en",
+    
     "input_placeholder": "Search",
     
     "nav_home" : "Home",
     "nav_language":"Language",
-    "nav_language_EU":"English",
+    "nav_language_EN":"English",
     "nav_language_DE":"German",
     "nav_language_FR":"French",
     "nav_language_TR":"Turkish",
-    "nav_language_JP":"Japanese",
-    "nav_units":"units",
-    "nav_metric":"metric",
-    "nav_standard":"standard",
-    "nav_imperial":"imperial",
+    "nav_language_JA":"Japanese",
+    "nav_units":"Units",
+    "nav_units_metric":"Metric",
+    "nav_units_standard":"Standard",
+    "nav_units_imperial":"Imperial",
 
     "current_weather":"Current Weather",
     "todays_weather_forecast":"Today's Weather Forecast",
@@ -37,11 +39,6 @@
     "details_wind_speed":"Wind Speed",
     "details_wind_gust":"Wind Gust",
     "details_clouds":"Clouds",
-    "details_celsius":"°C",
-    "details_kelvin":"K",
-    "details_fahrenheit":"°F",
-    "details_km_h":"km/h",
-    "details_mph":"mph",
     "details_sun":"Sunrise / Sunset",
     "details_moon":"Moonrise / Moonset",
     "details_rise":"Rise",
