--- a/language/ja.json
+++ b/language/ja.json
@@ -1,17 +1,19 @@
 {
+    "language_name":"ja",
+    
     "input_placeholder": "検索",
     
     "nav_home" : "ホーム",
     "nav_language": "言語",
-    "nav_language_EU": "英語",
+    "nav_language_EN": "英語",
     "nav_language_DE": "ドイツ語",
     "nav_language_FR": "フランス語",
     "nav_language_TR": "トルコ語",
-    "nav_language_JP": "日本語",
+    "nav_language_JA": "日本語",
     "nav_units": "単位",
-    "nav_metric": "メトリック",
-    "nav_standard": "標準",
-    "nav_imperial": "帝国",
+    "nav_units_metric": "メトリック",
+    "nav_units_standard": "標準",
+    "nav_units_imperial": "帝国",
 
     "current_weather": "現在の天気",
     "todays_weather_forecast": "今日の天気予報",
@@ -37,11 +39,7 @@
     "details_wind_speed": "風速",
     "details_wind_gust": "突風",
     "details_clouds": "雲",
-    "details_celsius": "°C",
-    "details_kelvin": "K",
-    "details_fahrenheit": "°F",
-    "details_km_h": "km/h",
-    "details_mph": "mph",
+
     "details_sun": "日の出 / 日没",
     "details_moon": "月の出 / 月の入り",
     "details_rise": "昇る",
