--- a/language/tr.json
+++ b/language/tr.json
@@ -1,24 +1,26 @@
 {
+    "language_name":"tr",
+
     "input_placeholder": "Arama",
     
     "nav_home" : "Ana Sayfa",
     "nav_language": "Dil",
-    "nav_language_EU": "İngilizce",
+    "nav_language_EN": "İngilizce",
     "nav_language_DE": "Almanca",
     "nav_language_FR": "Fransızca",
     "nav_language_TR": "Türkçe",
-    "nav_language_JP": "Japonca",
+    "nav_language_JA": "Japonca",
     "nav_units": "Birimler",
-    "nav_metric": "Metrik",
-    "nav_standard": "Standart",
-    "nav_imperial": "İmparatorluk",
+    "nav_units_metric": "Metrik",
+    "nav_units_standard": "Standart",
+    "nav_units_imperial": "Emperyal",
 
     "current_weather": "Mevcut Hava Durumu",
     "todays_weather_forecast": "Bugünün Hava Tahmini",
     "tonights_weather_forecast": "Bu Geceki Hava Tahmini",
     "tomorrow_weather_forecast": "Yarının Hava Tahmini",
     "feels_like": "Hissedilen",
-    "more_details": "Daha Fazla Detay",
+    "more_details": "Detay",
 
     "footer_text": "Kesin Hava Bilgileri ile Gününüze Güç Katın",
     "footer_rights": "Tüm Hakları Saklıdır.",
@@ -37,11 +39,6 @@
     "details_wind_speed": "Rüzgar Hızı",
     "details_wind_gust": "Rüzgar Şiddeti",
     "details_clouds": "Bulutlar",
-    "details_celsius": "°C",
-    "details_kelvin": "K",
-    "details_fahrenheit": "°F",
-    "details_km_h": "km/s",
-    "details_mph": "mil/s",
     "details_sun": "Gün Doğumu / Batımı",
     "details_moon": "Ay Doğumu / Batımı",
     "details_rise": "Doğuş",
