--- a/language/en.json
+++ b/language/en.json
@@ -5,12 +5,14 @@
     
     "nav_home" : "Home",
     "nav_language":"Language",
+    "nav_language_select":"Select a Language",
     "nav_language_EN":"English",
     "nav_language_DE":"German",
     "nav_language_FR":"French",
     "nav_language_TR":"Turkish",
     "nav_language_JA":"Japanese",
     "nav_units":"Units",
+    "nav_units_unit_select":"Select a Unit",
     "nav_units_metric":"Metric",
     "nav_units_standard":"Standard",
     "nav_units_imperial":"Imperial",
